[gd_scene load_steps=19 format=3 uid="uid://71lp8hkfy5c7"]

[ext_resource type="Script" path="res://shared/components/stats/health_component.gd" id="1_sex1y"]
[ext_resource type="Script" path="res://game/enemies/dummy/dummy.gd" id="1_tk1am"]
[ext_resource type="Texture2D" uid="uid://cwr3dcxbjcgo2" path="res://game/enemies/dummy/art/training_dummy_sprite_sheet.png" id="2_345hs"]
[ext_resource type="Script" path="res://shared/components/interactables/hit/hurtbox_component.gd" id="3_64nrc"]
[ext_resource type="Script" path="res://shared/components/move/move_data.gd" id="3_gnf2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4qp5"]
size = Vector2(25.3333, 44.3333)

[sub_resource type="AtlasTexture" id="AtlasTexture_omojr"]
atlas = ExtResource("2_345hs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qabqy"]
atlas = ExtResource("2_345hs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d42pe"]
atlas = ExtResource("2_345hs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1s40"]
atlas = ExtResource("2_345hs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlucp"]
atlas = ExtResource("2_345hs")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_506ef"]
atlas = ExtResource("2_345hs")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uis8b"]
atlas = ExtResource("2_345hs")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mya6f"]
atlas = ExtResource("2_345hs")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6mmq"]
atlas = ExtResource("2_345hs")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owdoc"]
atlas = ExtResource("2_345hs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kj0rl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omojr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qabqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d42pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1s40")
}],
"loop": false,
"name": &"hit_low",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlucp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_506ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uis8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mya6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6mmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlucp")
}],
"loop": false,
"name": &"hit_normal",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owdoc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ccfx"]
size = Vector2(25.5, 44.3333)

[node name="Dummy" type="CharacterBody2D" node_paths=PackedStringArray("components_2d", "animated_sprite")]
z_index = -1
scale = Vector2(6, 6)
collision_layer = 8
script = ExtResource("1_tk1am")
components_2d = NodePath("Components2D")
animated_sprite = NodePath("Components2D/AnimatedSprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.333333, 1.66667)
shape = SubResource("RectangleShape2D_k4qp5")

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("1_sex1y")
max_health = 1000.0
health = 1000.0

[node name="MoveData" type="Node" parent="Components"]
script = ExtResource("3_gnf2v")

[node name="Components2D" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Components2D"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kj0rl")
animation = &"hit_normal"

[node name="HurtboxComponent" type="Area2D" parent="Components2D" node_paths=PackedStringArray("parent", "health_component")]
script = ExtResource("3_64nrc")
parent = NodePath("../..")
health_component = NodePath("../../Components/HealthComponent")
energy_to_give = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components2D/HurtboxComponent"]
position = Vector2(-0.25, 1.66667)
shape = SubResource("RectangleShape2D_8ccfx")

[connection signal="health_damaged" from="Components/HealthComponent" to="." method="_on_health_component_health_damaged"]
[connection signal="hit_received" from="Components2D/HurtboxComponent" to="." method="_on_hurtbox_component_hit_received"]
